crates/lattice-store-mongodb/tests/ui/document_set_invalid_lazy_duration.rs
use lattice_store_mongodb::MongoDocumentSet;

#[derive(MongoDocumentSet)]
#[mongo(id = u64)]
struct InvalidDocuments {
    #[mongo(lazy_unload = "ten minutes")]
    value: String,
}

fn main() {}
